# gaka-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
assets/shaders/: lambertian.frag  line.frag  phong.frag
cmake/: FindVulkan.cmake  Findepoxy.cmake  Findlibepoxy.cmake
demos/: Animation.cpp  BezierSurface.cpp  CMakeLists.txt  pbrDemo.cpp
dev/: san_suppr.txt
dev/targets/: x64-linux-llvm-lcxxabi.cmake
dev/targets/toolchain/: linux-llvm.cmake
include/Animation/: Skeleton.hpp  SkinnedMesh.hpp
include/GFX/: Enums.hpp  FlyingCamera.hpp  Material.hpp  MaterialParameters.hpp  PointLight.hpp
include/GFX/OpenGL/: GLHelperFn.hpp  GLMesh.hpp  GLShaderProgram.hpp  GLTexture.hpp  GLVertexAttribute.hpp
include/GFX/Vulkan/: Error.hpp  VkShaderProgram.hpp  VulkanManager.hpp
include/GPU/OpenGL/: GLShaderProgram.hpp
include/GUI/: SDLOpenGLWindow.hpp  SDLVulkanWindow.hpp  SDLWindow.hpp  Window.hpp
include/Geometry/: Bezier.tpp  BezierSurface.tpp  BezierSurface_impl.hpp  Bezier_impl.hpp  Common.hpp  Curves.hpp  Mesh.hpp  Surface.hpp  algorithm.hpp
include/IO/: AssetManager.hpp  RessourceManager.hpp
include/Rendering/: Common.hpp  FlyingCamera.hpp  Material.hpp  Model.hpp  PointLight.hpp  RenderObject.hpp  Renderer.hpp  Scene.hpp  SceneNodes.hpp  ShaderProgram.hpp  Texture.hpp
include/glad/: gl.h
shaders/: CMakeLists.txt
shaders/OpenGL/: lambertian.frag  line.frag  mesh.vert  meshLBS.vert  metallicRoughness.frag  normals.frag  parametric.frag  phong.frag
shaders/Vulkan/: triangle.vert
src/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  main.cpp  main_vk.cpp
src/Animation/: Skeleton.cpp
src/GFX/: FlyingCamera.cpp  Material.cpp  MaterialParameters.cpp
src/GFX/OpenGL/: GLHelperFn.cpp  GLMesh.cpp  GLShaderProgram.cpp  GLTexture.cpp
src/GFX/Vulkan/: VulkanManager.cpp
src/GPU/OpenGL/: GLShaderProgram.cpp
src/GUI/: SDLOpenGLWindow.cpp  SDLVulkanWindow.cpp  SDLWindow.cpp
src/Geometry/: BezierSurface_impl.hpp  Curves.cpp  Curves.hpp  Mesh.hpp  Surface.hpp
src/IO/: AssetManager.cpp  RessourceManager.cpp
src/Rendering/: FlyingCamera.cpp  Material.hpp  PointLight.hpp  RenderObject.cpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  ShaderProgram.cpp  ShaderProgram.hpp
src/Rendering/SceneNodes/: CameraNode.cpp  MeshNode.cpp  SceneNodes.cpp  TextureNode.cpp
